--- a/src/app/votantes/votantes.component.html
+++ b/src/app/votantes/votantes.component.html
@@ -1,1 +1,31 @@
-<p>votantes works!</p>
+<app-nav [isHide]="hideNav"></app-nav>
+<div class="container">
+  <div class="main-title">
+    <div class="title">
+      <h1>Votantes</h1>
+      <p>Gestión de los votantes</p>
+    </div>
+    <div class="action">
+      <button>
+        Crear Votante
+        <mat-icon>add</mat-icon>
+      </button>
+    </div>
+  </div>
+  <div class="votantes">
+    <app-votante-card></app-votante-card>
+    <app-votante-card></app-votante-card>
+
+    <app-votante-card></app-votante-card>
+    <app-votante-card></app-votante-card>
+    <app-votante-card></app-votante-card>
+    <app-votante-card></app-votante-card>
+    <app-votante-card></app-votante-card>
+    <app-votante-card></app-votante-card>
+    <app-votante-card></app-votante-card>
+    <app-votante-card></app-votante-card>
+    <app-votante-card></app-votante-card>
+    <app-votante-card></app-votante-card>
+    <app-votante-card></app-votante-card>
+  </div>
+</div>
