--- a/src/app/candidatos/candidatos.component.html
+++ b/src/app/candidatos/candidatos.component.html
@@ -1,1 +1,31 @@
-<p>candidatos works!</p>
+<app-nav [isHide]="hideNav"></app-nav>
+<div class="container">
+  <div class="main-title">
+    <div class="title">
+      <h1>Candidatos</h1>
+      <p>Gestión de los candidatos</p>
+    </div>
+    <div class="action">
+      <button>
+        Crear Candidato
+        <mat-icon>add</mat-icon>
+      </button>
+    </div>
+  </div>
+  <div class="candidatos">
+    <app-candidato-card></app-candidato-card>
+    <app-candidato-card></app-candidato-card>
+
+    <app-candidato-card></app-candidato-card>
+    <app-candidato-card></app-candidato-card>
+    <app-candidato-card></app-candidato-card>
+    <app-candidato-card></app-candidato-card>
+    <app-candidato-card></app-candidato-card>
+    <app-candidato-card></app-candidato-card>
+    <app-candidato-card></app-candidato-card>
+    <app-candidato-card></app-candidato-card>
+    <app-candidato-card></app-candidato-card>
+    <app-candidato-card></app-candidato-card>
+    <app-candidato-card></app-candidato-card>
+  </div>
+</div>
