--- a/src/app/elecciones/elecciones.component.scss
+++ b/src/app/elecciones/elecciones.component.scss
@@ -1,90 +1,92 @@
 @import "src/assets/styles/styles.scss";
 
-.container{
-    width: 100vw;
-    height: auto;
-    background: $mainBackgroundColor;
-    padding: 6%;
-    @include title();
-    @include paragraph();
-    @include button();
-    h1,p{
-        margin: 0;
-    }
+.container {
+  width: 100vw;
+  height: auto;
+  background: $mainBackgroundColor;
+  padding: 8% 5%;
+  @include title();
+  @include paragraph();
+  @include button();
+  h1,
+  p {
+    margin: 0;
+  }
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  .main-title {
+    width: 100%;
     display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    flex-direction: column;
-    .main-title{
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        .title{
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-        }
-        .actions{
-            display: flex;
-            align-content: center;
-            justify-content: center;
-        }
+    align-items: center;
+    justify-content: space-between;
+    .title {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
     }
-    .content{
-        scroll-behavior: smooth;
-        scroll-snap-type: x mandatory;
-        overflow: hidden;
+    .actions {
+      display: flex;
+      align-content: center;
+      justify-content: center;
     }
-    .title{
-        display: flex;
-        align-items:center;
-        justify-content: space-between;
-        button{
-            width: 10vw;
-        }
-
+  }
+  .content {
+    scroll-behavior: smooth;
+    scroll-snap-type: x mandatory;
+    overflow: hidden;
+  }
+  .title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    button {
+      width: 10vw;
     }
-    .actives{
-        width: 100%;
-        margin-bottom: 20px;
-        .title,.content{
-            padding: 20px;
-            border-radius: 44px;
-        }
-       .title{
-        width: 100%;
-        background-color: white;
-        margin-bottom: 10px;
-       }
-       .content{
-        width: 100%;
-        height: 50vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: $secondBackgroundColor;
-       }
+  }
+  .actives {
+    width: 100%;
+    margin-bottom: 20px;
+    .title,
+    .content {
+      padding: 20px;
+      border-radius: 44px;
     }
-    .not-actives{
-        width: 100%;
-        .title,.content{
-            padding: 20px;
-            border-radius: 44px;
-        }
-        .title{
-            margin-bottom: 10px;
-            width: 100%;
-            background-color: white;
-            border-radius: 44px;
-           }
-           .content{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 100%;
-            height: 50vh;
-            background-color: $secondBackgroundColor;
-           }
+    .title {
+      width: 100%;
+      background-color: white;
+      margin-bottom: 10px;
     }
+    .content {
+      width: 100%;
+      height: 50vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: $secondBackgroundColor;
+    }
+  }
+  .not-actives {
+    width: 100%;
+    .title,
+    .content {
+      padding: 20px;
+      border-radius: 44px;
+    }
+    .title {
+      margin-bottom: 10px;
+      width: 100%;
+      background-color: white;
+      border-radius: 44px;
+    }
+    .content {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      height: 50vh;
+      background-color: $secondBackgroundColor;
+    }
+  }
 }
