--- a/src/app/votantes/votantes.component.scss
+++ b/src/app/votantes/votantes.component.scss
@@ -1,58 +1,57 @@
 @import "src/assets/styles/styles.scss";
 
-.container{
-    width: 100vw;
-    min-height: 100vh;
-    height: auto;
-    background: $mainBackgroundColor;
-    padding: 6%;
-    @include title();
-    @include paragraph();
-    @include button();
-    h1,p{
-        margin: 0;
-    }
+.container {
+  width: 100vw;
+  min-height: 100vh;
+  height: auto;
+  background: $mainBackgroundColor;
+  padding: 8% 5%;
+  @include title();
+  @include paragraph();
+  @include button();
+  h1,
+  p {
+    margin: 0;
+  }
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  .main-title {
+    width: 100%;
     display: flex;
-    align-items: flex-start;
-    justify-content: flex-start ;
-    flex-direction: column;
-    .main-title{
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        .title{
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-        }
-        .actions{
-            display: flex;
-            align-content: center;
-            justify-content: center;
-        }
+    align-items: center;
+    justify-content: space-between;
+    .title {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
     }
-    .content{
-        scroll-behavior: smooth;
-        scroll-snap-type: x mandatory;
-        overflow: hidden;
+    .actions {
+      display: flex;
+      align-content: center;
+      justify-content: center;
     }
-    .title{
-        display: flex;
-        align-items:center;
-        justify-content: space-between;
-        button{
-            width: 10vw;
-        }
-
+  }
+  .content {
+    scroll-behavior: smooth;
+    scroll-snap-type: x mandatory;
+    overflow: hidden;
+  }
+  .title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    button {
+      width: 10vw;
     }
-    .votantes{
-        width: 100%;
-        min-height: 50vh;
-        display: grid;
-        grid-template-columns: repeat(6, 1fr);
-        grid-gap: 20px;
-        grid-auto-rows: minmax(150px, auto);
-    }
-    
+  }
+  .votantes {
+    width: 100%;
+    min-height: 50vh;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-gap: 20px;
+    grid-auto-rows: minmax(150px, auto);
+  }
 }
