--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700;800&display=swap");
 $buttonColor: #3a3cac;
 $secondButtonColor: #74afb7;
 
@@ -104,7 +104,7 @@ $cardColor: white;
         width: 100%;
         height: 60px;
         background-color: none;
-        border: 1px solid;
+        border: none;
         color: black;
         @if map-has-key($props, "color") {
           border-color: map-get($props, "color");
