--- a/src/app/candidatos/candidatos.component.html
+++ b/src/app/candidatos/candidatos.component.html
@@ -7,7 +7,7 @@
       <p>Gestión de los candidatos</p>
     </div>
     <div class="action">
-      <button routerLink="/candidatos/create">
+      <button (click)="createCandidate()">
         Crear Candidato
         <mat-icon>add</mat-icon>
       </button>
