--- a/src/app/elecciones/fullactives/fullactives.component.html
+++ b/src/app/elecciones/fullactives/fullactives.component.html
@@ -1,6 +1,6 @@
-<div class="container mat-elevation-z9">
+<div class="container">
   <div class="header">
-    <button><mat-icon>close</mat-icon></button>
+    <button (click)="closeDialog()"><mat-icon>close</mat-icon></button>
   </div>
   <div class="content"></div>
 </div>
