--- a/src/app/candidatos/create-candidate/create-candidate.component.scss
+++ b/src/app/candidatos/create-candidate/create-candidate.component.scss
@@ -1,53 +1,39 @@
 @import "src/assets/styles/styles.scss";
-.testing {
-  width: 100vw;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 4;
-  background-color: black;
-  opacity: 0.4;
-}
 .container {
-  position: absolute;
-  top: 50%; /* position the top  edge of the element at the middle of the parent */
-  left: 50%; /* position the left edge of the element at the middle of the parent */
+  display: flex;
+  align-items: center;
+  justify-content: center;
   @include button();
   @include title();
+  padding: 0px 10px;
   h1 {
     font-size: 1.5rem;
   }
   h1,
   button {
-    margin-top: 10px;
+    margin: 0;
   }
   @include form-controller(
     (
       Properties: (
         border-color: rgb(195, 21, 21),
-        height: 25px,
+        height: 35px,
         radius: 40px,
       ),
     )
   );
-
-  transform: translate(-50%, -50%);
+  flex-direction: column;
   background-color: white;
   border-radius: 20px;
   box-sizing: border-box;
-  padding: 10px;
-  width: 30vw;
-  height: auto;
+  width: 100%;
+  height: 100%;
   z-index: 5;
   .header {
-    right: 0;
-    top: 10;
     width: 100%;
-    position: fixed;
-    height: 10%;
+    height: 5%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     button {
       width: 50px;
       padding: 0;
@@ -60,10 +46,14 @@
     align-items: flex-start;
     justify-content: center;
     form {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      height: 100%;
       .form-controller {
         margin-bottom: 5px;
       }
-      width: 90%;
+      width: 100%;
     }
   }
 }
