--- a/src/app/elecciones/elecciones.component.html
+++ b/src/app/elecciones/elecciones.component.html
@@ -1,6 +1,5 @@
 <app-nav [isHide]="hideNav"></app-nav>
 <div class="container">
-  <router-outlet></router-outlet>
   <div class="main-title">
     <div class="title">
       <h1>Elecciones</h1>
@@ -16,7 +15,7 @@
   <div class="actives">
     <div class="title">
       <h1>Elecciones Activas</h1>
-      <button routerLink="/elecciones/full-actives">Ver todas</button>
+      <button (click)="openFullActivesDialog()">Ver todas</button>
     </div>
     <div class="content">
       <app-elecciones-card
@@ -27,7 +26,7 @@
   <div class="not-actives">
     <div class="title">
       <h1>Elecciones Pasadas</h1>
-      <button>Ver todas</button>
+      <button (click)="openFullNoActivesDialog()">Ver todas</button>
     </div>
     <div class="content">
       <app-elecciones-card
