--- a/src/app/elecciones/fullactives/fullactives.component.scss
+++ b/src/app/elecciones/fullactives/fullactives.component.scss
@@ -1,18 +1,10 @@
 @import "src/assets/styles/styles.scss";
 
 .container {
-  width: 80vw;
-  height: 80vh;
-  position: absolute;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
-  text-align: center;
+  position: relative;
+  box-sizing: border-box;
   background-color: white;
   border-radius: 44px;
-  padding: 3%;
-  z-index: 5;
   @include button();
   .header {
     height: 15%;
