--- a/src/app/elecciones/fullnoactives/fullnoactives.component.html
+++ b/src/app/elecciones/fullnoactives/fullnoactives.component.html
@@ -1,1 +1,6 @@
-<div class="container mat-elevation-z9"></div>
+<div class="container">
+  <div class="header">
+    <button (click)="closeDialog()"><mat-icon>close</mat-icon></button>
+  </div>
+  <div class="content"></div>
+</div>
