--- a/src/app/elecciones/fullnoactives/fullnoactives.component.scss
+++ b/src/app/elecciones/fullnoactives/fullnoactives.component.scss
@@ -1,13 +1,32 @@
-.container {
-  width: 80vw;
-  height: 80vh;
+@import "src/assets/styles/styles.scss";
+.testing {
+  width: 100vw;
+  height: 100%;
   position: absolute;
-  margin-left: auto;
-  margin-right: auto;
+  top: 0;
   left: 0;
-  right: 0;
-  text-align: center;
+  z-index: 4;
+  background-color: black;
+  opacity: 0.4;
+}
+.container {
+  box-sizing: border-box;
   background-color: white;
   border-radius: 44px;
-  z-index: 5;
+
+  @include button();
+  .header {
+    height: 15%;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    button {
+      width: 50px;
+      padding: 0;
+    }
+  }
+  .content {
+    height: 85%;
+    width: 100%;
+  }
 }
