--- a/src/app/candidatos/candidato-card/candidato-card.component.html
+++ b/src/app/candidatos/candidato-card/candidato-card.component.html
@@ -1,4 +1,4 @@
-<div class="card mat-elevation-z4">
+<div (click)="openEdit()" class="card mat-elevation-z4">
   <h1>{{ candidato.nombre }}</h1>
   <h1>{{ candidato.apellido }}</h1>
   <h1>{{ candidato.dni }}</h1>
