--- a/src/app/common/nav/nav.component.html
+++ b/src/app/common/nav/nav.component.html
@@ -8,6 +8,7 @@
     <h1 routerLink="/elecciones">Elecciones</h1>
     <h1 routerLink="/votantes">Votantes</h1>
     <h1 routerLink="/candidatos">Candidatos</h1>
+    <h1 routerLink="/partidos">Partidos Politicos</h1>
     <h1 routerLink="/estadisticas">Estadisticas</h1>
   </div>
 </div>
