--- a/src/app/elecciones/fullactives/fullactives.component.html
+++ b/src/app/elecciones/fullactives/fullactives.component.html
@@ -2,5 +2,14 @@
   <div class="header">
     <button (click)="closeDialog()"><mat-icon>close</mat-icon></button>
   </div>
-  <div class="content"></div>
+  <div class="content">
+    <app-elecciones-card></app-elecciones-card>
+    <app-elecciones-card></app-elecciones-card>
+    <app-elecciones-card></app-elecciones-card>
+    <app-elecciones-card></app-elecciones-card>
+    <app-elecciones-card></app-elecciones-card>
+    <app-elecciones-card></app-elecciones-card>
+    <app-elecciones-card></app-elecciones-card>
+    <app-elecciones-card></app-elecciones-card>
+  </div>
 </div>
