adding candidate and political party logic

--- a/src/app/candidatos/candidato-card/candidato-card.component.html
+++ b/src/app/candidatos/candidato-card/candidato-card.component.html
@@ -1,7 +1,5 @@
 <div (click)="openEdit()" class="card mat-elevation-z4">
-  <h1>{{ candidato.nombre }}</h1>
-  <h1>{{ candidato.apellido }}</h1>
-  <h1>{{ candidato.dni }}</h1>
-  <p>{{ candidato.partido }}</p>
-  <p>{{ candidato.email }}</p>
+  <h1>{{ candidato.name }}</h1>
+  <h1>{{ candidato.lastName }}</h1>
+  <p>{{ candidato.dni }}</p>
 </div>
