--- a/src/app/candidatos/candidatos.component.html
+++ b/src/app/candidatos/candidatos.component.html
@@ -19,6 +19,7 @@
     </div>
     <app-candidato-card
       *ngFor="let candidato of candidatos"
+      [candidato]="candidato"
     ></app-candidato-card>
   </div>
 </div>
