--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -120,7 +120,7 @@ $cardColor: white;
           font-size: 1.3rem;
           font-family: $titleFont;
           font-weight: bold;
-          background-color: rebeccapurple;
+          background-color: #e8e8e8;
         }
       }
 
