--- a/src/app/votantes/votante-card/votante-card.component.html
+++ b/src/app/votantes/votante-card/votante-card.component.html
@@ -1,6 +1,6 @@
 <div class="card mat-elevation-z4">
-  <h1>{{ votante.nombre }}</h1>
-  <h1>{{ votante.apellido }}</h1>
+  <h1>{{ votante.name }}</h1>
+  <h1>{{ votante.lastName }}</h1>
   <p>{{ votante.dni }}</p>
   <div class="voted" *ngIf="votante.voted != undefined">
     <p>Ha votado:</p>
