--- a/src/app/votantes/votante-card/votante-card.component.scss
+++ b/src/app/votantes/votante-card/votante-card.component.scss
@@ -1,28 +1,34 @@
 @import "src/assets/styles/styles.scss";
-.card{
-    @include title();
-    @include paragraph();
-    width: 200px;
-    height: 240px;
-    border-radius: 20px;
-    background-color: white;
-    padding: 10px;
+.card {
+  @include button();
+  @include title();
+  @include paragraph();
+  width: 200px;
+  height: 240px;
+  border-radius: 20px;
+  background-color: white;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  h1,
+  p {
+    margin: 0;
+  }
+  h1 {
+    font-size: 1.2rem;
+  }
+  p {
+    font-size: 1rem;
+  }
+  .voted {
     display: flex;
+    align-items: center;
     justify-content: center;
-    align-items:flex-start;
-    flex-direction: column;
-    h1,p{
-        margin: 0;
-    }
-    h1{
-        font-size: 1.2rem;
-    }
-    p{
-        font-size: 1rem;
-    }
-    .voted{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
+  }
+  button {
+    margin-top: 10px;
+    font-size: 1rem;
+  }
 }
