adding half crud

--- a/src/app/elecciones/elecciones-card/elecciones-card.component.html
+++ b/src/app/elecciones/elecciones-card/elecciones-card.component.html
@@ -2,8 +2,6 @@
   <h1>{{ election.title }}</h1>
   <p>{{ election.description }}</p>
   <div class="fechas">
-    <p>{{ election.fechaInit }}</p>
-    <p>-</p>
-    <p>{{ election.fechaFin }}</p>
+    <p>{{ election.date }}</p>
   </div>
 </div>
