--- a/src/app/elecciones/elecciones-card/elecciones-card.component.html
+++ b/src/app/elecciones/elecciones-card/elecciones-card.component.html
@@ -1,6 +1,6 @@
 <div class="card mat-elevation-z5">
-  <h1>{{ election.title }}</h1>
-  <p>{{ election.description }}</p>
+  <h1>{{ election.description }}</h1>
+  <p>{{ election.votingStatus }}</p>
   <div class="fechas">
     <p>{{ election.date }}</p>
   </div>
