electoral voting ver 2

--- a/src/app/elecciones/elecciones.component.html
+++ b/src/app/elecciones/elecciones.component.html
@@ -20,6 +20,7 @@
     <div class="content">
       <app-elecciones-card
         *ngFor="let eleccion of eleccionesActivas"
+        [election]="eleccion"
       ></app-elecciones-card>
     </div>
   </div>
