--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,3 +13,10 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+.green-snackbar {
+  background: #7faf81;
+}
+.red-snackbar {
+  background: red;
+}
