--- a/src/app/candidatos/create-candidate/create-candidate.component.html
+++ b/src/app/candidatos/create-candidate/create-candidate.component.html
@@ -65,6 +65,16 @@
         </div>
       </div>
       <div class="form-controller">
+        <label>Eleccion a Participar</label>
+        <div class="form-container">
+          <select formControlName="election">
+            <option *ngFor="let election of elections" [value]="election.id">
+              {{ election.description }}
+            </option>
+          </select>
+        </div>
+      </div>
+      <div class="form-controller">
         <label>Correo Electrónico</label>
         <div class="form-container">
           <input
