--- a/src/app/estadisticas/estadisticas.component.html
+++ b/src/app/estadisticas/estadisticas.component.html
@@ -1,1 +1,10 @@
-<p>estadisticas works!</p>
+<app-nav [isHide]="hideNav"></app-nav>
+<router-outlet></router-outlet>
+<div class="container">
+  <div class="main-title">
+    <div class="title">
+      <h1>Partidos</h1>
+      <p>Gestión de los Partidos</p>
+    </div>
+  </div>
+</div>
