adding voter editing

--- a/src/app/candidatos/create-candidate/create-candidate.component.html
+++ b/src/app/candidatos/create-candidate/create-candidate.component.html
@@ -46,8 +46,8 @@
             >
               Seleccione su genero
             </option>
-            <option value="true">Masculino</option>
-            <option value="false">Femenino</option>
+            <option value="{{ true }}">Masculino</option>
+            <option value="{{ false }}">Femenino</option>
           </select>
         </div>
       </div>
