--- a/src/app/estadisticas/estadisticas.component.html
+++ b/src/app/estadisticas/estadisticas.component.html
@@ -3,8 +3,8 @@
 <div class="container">
   <div class="main-title">
     <div class="title">
-      <h1>Partidos</h1>
-      <p>Gestión de los Partidos</p>
+      <h1>Estadisticas</h1>
+      <p>Observe toda la información de la votación en vivo</p>
     </div>
   </div>
 </div>
