--- a/src/app/votantes/votante-card/votante-card.component.html
+++ b/src/app/votantes/votante-card/votante-card.component.html
@@ -1,4 +1,4 @@
-<div class="card mat-elevation-z4">
+<div class="card mat-elevation-z4" (click)="openEdit()">
   <h1>{{ votante.name }}</h1>
   <h1>{{ votante.lastName }}</h1>
   <p>{{ votante.dni }}</p>
