--- a/src/app/votantes/create-votante/create-votante.component.html
+++ b/src/app/votantes/create-votante/create-votante.component.html
@@ -106,7 +106,7 @@
       </div>
     </form>
     <button (click)="submitForm()">
-      {{ voter.name.length > 0 ? " Editar Candidato" : "Registrar Candidato" }}
+      {{ voter.name.length > 0 ? " Editar Votante" : "Registrar Votante" }}
     </button>
   </div>
 </div>
